--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.4'
 
+    implementation 'com.amplifyframework:aws-analytics-pinpoint:1.24.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     androidTestImplementation 'androidx.test:rules:1.4.0'
