--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 android {
     compileSdk 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.android.taskmaster2"
@@ -30,8 +31,6 @@ android {
 
 dependencies {
 
-    implementation group: 'commons-io', name: 'commons-io', version: '2.4'
-
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     androidTestImplementation 'androidx.test:rules:1.4.0'
@@ -48,6 +47,9 @@ dependencies {
     implementation 'com.amplifyframework:aws-api:1.24.0'
     implementation 'com.amplifyframework:aws-datastore:1.24.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
+
+    implementation 'com.amplifyframework:aws-storage-s3:1.24.0'
     implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
 
 
